spec/e2e/field/undefined.lit
type Foo {}
let foo = Foo();

foo.bar; # error: [line 4] Undefined property 'bar'.
